# image-bicubic-interpolation

./: README.md  pyproject.toml
src/: main.py
