[tool.poetry]
name = "image-bicubic-interpolation"
version = "0.1.0"
description = ""
authors = ["Meg-Ssk"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
